Removed warnings